More checkin in logic and integration tests
