# src/main/java/com/devit/checkmein/api/impl/WhoAreThereApiImpl.java
@@ -1,7 +1,7 @@
 package com.devit.checkmein.api.impl;
 
 import com.devit.checkmein.api.WhoAreThereApi;
-import com.devit.checkmein.api.model.CheckinWS;
+import com.devit.checkmein.api.model.CheckInBean;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -14,7 +14,7 @@ import java.util.List;
 public class WhoAreThereApiImpl implements WhoAreThereApi {
 
 	@Override
-	public ResponseEntity<List<CheckinWS>> whoAreThere() {
+	public ResponseEntity<List<CheckInBean>> whoAreThere() {
 		return null;
 	}
 
